# TeloxBot

./: Cargo.toml
src/: admin.rs  bot.rs  comandos.rs  fun.rs  funciones.rs  lib.rs  main.rs
src/buttons/: buttons_handler.rs
src/commands/: funciones.rs  handler.rs  json_handler.rs  mod.rs  testing.rs
src/commands/admin_commands/: ban.rs  lib.rs  mod.rs  mute.rs  unban.rs
src/commands/fun_commands/: mod.rs
src/utils/: anti_spam.rs  info.rs  random_generator.rs
